fix(tax): unify step-6 and dashboard calculators to fix regime-total drift
Step-6 assessment and dashboard tax page displayed different numbers
for the same user because they ran separate tax engines with diverging
constants, missing deductions, and different rebate rules.

- Introduce TaxComputationEngine as single source of truth for both
  old/new regime math (slabs, rebate 87A, std deduction caps).
- Extend Tax model + DTO with 80CCD(1B) NPS, 24(b) home-loan interest,
  80E education-loan interest, 80G donations, senior-parent medical,
  NSC/FD 80C so all step-6 inputs persist to the backend.
- TaxService.saveTax now recomputes regime totals server-side via the
  engine, ignoring client-supplied calculatedTaxOld/New.
- TaxAnalysisCalculator (dashboard) reads persisted deductions + uses
  the same engine. HRA now computed from rent + salary instead of
  hard-zeroed.
- TaxCalculationController accepts granular per-component params so
  the engine can apply sub-limits correctly (80CCD(1B) ₹50K cap,
  24(b) ₹2L cap, per-head 80D caps).

Also fix: OpenAPI contact URL (https://myfinancial.in, not app.*).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>